--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"svelte-preprocess": "^4.10.5",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2",
+		"svelte2tsx": "^0.5.9",
 		"postcss": "^8.4.12",
 		"postcss-load-config": "^3.1.4",
 		"autoprefixer": "^10.4.4",
