--- a/package.json
+++ b/package.json
@@ -27,23 +27,23 @@
 		"@types/sortablejs": "^1.10.7",
 		"@typescript-eslint/eslint-plugin": "^5.10.1",
 		"@typescript-eslint/parser": "^5.10.1",
+		"autoprefixer": "^10.4.4",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
 		"fontawesome-svelte": "^2.0.1",
+		"postcss": "^8.4.12",
+		"postcss-load-config": "^3.1.4",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
 		"sass": "^1.51.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.5",
+		"tailwindcss": "^3.0.23",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2",
-		"svelte2tsx": "^0.5.9",
-		"postcss": "^8.4.12",
-		"postcss-load-config": "^3.1.4",
-		"autoprefixer": "^10.4.4",
-		"tailwindcss": "^3.0.23"
+		"vite-plugin-sveld": "^1.0.3"
 	},
 	"type": "module",
 	"dependencies": {
