--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,9 +8,5 @@
 	"editor.quickSuggestions": {
 		"strings": true
 	},
-	"eslint.validate": [
-		"javascript",
-		"javascriptreact",
-		"svelte"
-	]
+	"eslint.validate": ["javascript", "javascriptreact", "svelte"]
 }
