--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,7 @@
 		"checkJs": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"lib": [
-			"es2020",
-			"DOM"
-		],
+		"lib": ["es2020", "DOM"],
 		"moduleResolution": "node",
 		"module": "es2020",
 		"resolveJsonModule": true,
