--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.5",
+		"svelte2tsx": "^0.5.9",
 		"tailwindcss": "^3.0.23",
 		"tslib": "^2.3.1",
 		"typescript": "~4.6.2",
