--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "svelte-sortablejs",
+	"name": "@jhubbardsf/svelte-sortablejs",
 	"version": "0.0.1",
 	"author": "Josh Hubbard <josh@joshuahubbard.dev> (https://joshuahubbard.dev/)",
 	"description": "A Svelte wrapper for the Sortable.js library",
